--- a/package.json
+++ b/package.json
@@ -49,8 +49,9 @@
     "node-fetch-polyfill": "^2.0.6",
     "prettier": "^2.0.5",
     "raw-loader": "^4.0.1",
-    "webpack": "^4.43.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "websocket": "^1.0.34"
   }
 }
